--- a/ansible/playbooks/service_certs.yaml
+++ b/ansible/playbooks/service_certs.yaml
@@ -33,6 +33,7 @@
         - "DNS:*.{{ item }}"
         - "DNS:*.{{ item }}.svc"
         - "DNS:*.{{ item }}.svc.cluster.local"
+        - "DNS:*.{{ item }}.{{ k3s_domain }}"
     when: not cert_exists.stat.exists
     register: csr
     run_once: true
