feature/dex_oicd # Reverted persistent volumes. Sorted out bindldap

--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -9,7 +9,7 @@ k3d:
   openldap_hostname: openldap
   vault_hostname: vault
   pvdir: ../volumes
-  persistent_volumes: [ pv1, pv2, pv3, pv4, pv5, pv6, pv7 ]
+  persistent_volumes: [ pv1, pv2, pv3, pv4, pv5, pv6 ]
 terraform:
   rootdir: ../terraform
   cluster:
@@ -20,7 +20,6 @@ terraform:
     harbor_5_pv: pv5
     harbor_6_pv: pv6
     harbor_nodeport: 30081
-    openldap_pv: pv7
     postgresql_pv: pv3
     vault_nodeport: 30080
     vault_pv: pv2
@@ -54,9 +53,6 @@ terraform:
     openldap_bind_password: "{{ openldap_bind_password }}"
     openldap_fqdn: "{{ k3d.openldap_hostname}}.{{ k3d.domain }}"
     openldap_helm_version: v4.0.2
-    openldap_pv_vol: 'pv7'
-    openldap_storage: 8Gi
-    postgresql_version: '13.9.0'
     postgresql_helm_version: v12.1.6
     postgresql_password: "{{ sql_password }}"
     postgresql_storage: 10Gi
