--- a/ansible/playbooks/services.yaml
+++ b/ansible/playbooks/services.yaml
@@ -1,7 +1,7 @@
 ---
   - name: Create service wildcard certificates
     include_tasks: service_certs.yaml
-    loop: ['postgresql', 'redis']
+    loop: ['postgresql', 'redis', 'dex']
 
   - name: Create harbor certificates
     include_tasks: harbor_certs.yaml
