feature/dex_oidc # Bad group name attr.

--- a/terraform/services/helm_values/dex_helm_values.yaml
+++ b/terraform/services/helm_values/dex_helm_values.yaml
@@ -20,7 +20,7 @@ config:
         groupSearch:
           baseDN: ou=groups,dc=gitops,dc=local
           filter: "(objectClass=posixGroup)"
-          nameAttr: uid
+          nameAttr: cn 
           userMatchers:
             - userAttr: uid
               groupAttr: memberuid
